--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 							<option  title="Изящный, подходит для всех типов реалистичных портретов." value="3">Холст из натурального хлопка</option>
 						</select>
 						<select id=options>
-							<option value="">Дополнительные услуги</option>
+							<option value="1">Дополнительные услуги</option>
 							<option value="2">Покрытие арт-гелем</option>
 							<option value="3">Экспресс-изготовление</option>
 							<option value="4">Доставка готовых работ </option>
@@ -662,7 +662,7 @@
 				<button class=popup-close>&times;</button>
 				<h4>Остались вопросы? Закажите обратный звонок</h4>
 				<div class=main-form>
-					<form class=form action=mailer/smart.php method=POST>
+					<form class=form action=server.php method=POST>
 						<input type=text name=name placeholder="Ваше имя" required>
 						<input type=text name=phone placeholder="Ваш телефон" required>
 						<button class="button button-order" onclick="yaCounter46630539.reachGoal('btn-consultation'); return true;">Получить консультацию</button>
