--- a/index.html
+++ b/index.html
@@ -366,27 +366,27 @@
 			<h2>Можем изготовить картину любого размера!</h2>
 			<div class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0">
 				<div class=sizes-wrapper>
-					<div class=sizes-block>
-						<img class=size-1 src=img/sizes-1.png alt>
+					<div class="sizes-block img-sizes">
+						<img class="size-1" src=img/sizes-1.png alt>
 						<p class=size>40x50</p>
 						<p class=starting-price>5 290 руб.</p>
 						<p class=final-price>3 670 руб.</p>
 					</div>
-					<div class=sizes-block>
-						<img class=size-2 src=img/sizes-2.png alt>
+					<div class="sizes-block img-sizes">
+						<img class="size-2" src=img/sizes-2.png alt>
 						<p class=size>50x70</p>
 						<p class=starting-price>5 290 руб.</p>
 						<p class=final-price>3 670 руб.</p>
 					</div>
-					<div class=sizes-block>
-						<img class=size-3 src=img/sizes-3.png alt>
+					<div class="sizes-block img-sizes">
+						<img class="size-3" src=img/sizes-3.png alt>
 						<p class=size>70x70</p>
 						<p class=starting-price>5 290 руб.</p>
 						<p class=final-price>3 670 руб.</p>
 						<p class=sizes-hit>Хит продаж</p>
 					</div>
-					<div class=sizes-block>
-						<img class=size-4 src=img/sizes-4.png alt>
+					<div class="sizes-block img-sizes">
+						<img class="size-4" src=img/sizes-4.png alt>
 						<p class=size>70x100</p>
 						<p class=starting-price>5 290 руб.</p>
 						<p class=final-price>3 670 руб.</p>
@@ -549,25 +549,25 @@
 			<h2>Ответим на любой из ваших вопросов</h2>
 			<div id=accordion>
 				<p class="accordion-heading col-md-8 col-md-offset-2"><span>Сколько времени нужно для изготовления заказа?</span></p>
-				<div class="col-md-8 col-md-offset-2 accordion-block">
+				<div class="col-md-8 col-md-offset-2 accordion-block animated zoomIn">
 					<p>
 						Время выполнения заказа зависит от трех факторов: сложности картины, стиля написания и размера. Среднее время выполнения заказа составляет 7 дней без учета времени на доставку. В ряде случаев по желанию заказчика можно уменьшить срок до 5 дней.<br><br>Примечание: Если Вы решите что-то изменить в картине, внести коррективы - это может занять дополнительное время, которое не учитывается при оговоренном сроке выполнения.
 					</p>
 				</div>
 				<p class="accordion-heading col-md-8 col-md-offset-2"><span>Смогу ли я увидеть картину до ее получения?</span></p>
-				<div class="col-md-8 col-md-offset-2 accordion-block">
+				<div class="col-md-8 col-md-offset-2 accordion-block animated zoomIn">
 					<p>
 						Да. По готовности, мы отправляем по электронной почте цифровое фото Вашей картины, для того, чтобы Вы смогли, при необходимости внести свои корректировки и пожелания, если таковые будут. Вы также сможете увидеть картину "вживую" в нашем салоне. Сообщите об этом Вашему менеджеру.
 					</p>
 				</div>
 				<p class="accordion-heading col-md-8 col-md-offset-2"><span>Какого формата должны быть фотографии</span></p>
-				<div class="col-md-8 col-md-offset-2 accordion-block">
+				<div class="col-md-8 col-md-offset-2 accordion-block animated zoomIn">
 					<p>
 						Мы работаем со всеми известными форматами изображений! Через сайт вы можете загрузить JPEG, TIFF, PNG размером до 50 мегабайт. Вы должны обладать авторскими правами или иметь разрешение на использование изображения. Если у Вас другой формат изображения (RAW, PDF), то вы можете воспользоваться FTP загрузчиком. Если вы хотите сделать фото из бумажной фотографии (не цифровой), пришлите его нам, мы отсканируем, обработаем и вернем фото вместе с вашим заказом!
 					</p>
 				</div>
 				<p class="accordion-heading col-md-8 col-md-offset-2"><span>Могу ли я дать особые указания художнику</span></p>
-				<div class="col-md-8 col-md-offset-2 accordion-block">
+				<div class="col-md-8 col-md-offset-2 accordion-block animated zoomIn">
 					<p>
 						Когда вы размещаете свой заказ на сайте, вы можете добавить свои комментарии в специальном текстовом поле. Вы также можете: объединить объекты с разных фото в одно или удалить объекты с фото, можете поменять задний фон, поменять одежду, наряды, сделать цветную картину с черно-белого фото, а также заказать картину с поврежденного или старого фото.
 					</p>
