--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 	</section>
 	<div class=feedback>
 		<div class=container>
-			<div class=feedback-slider style="position:relative; height: 400px;">
+			<div class=feedback-slider style="position:relative; height: 420px;">
 				<button class="main-slider-btn main-prev-btn">
 					<img src="img/left-arr.png">
 				</button>'
@@ -499,7 +499,7 @@
 					<img src="img/right-arr.png">
 				</button>
 				<div class="feedback-slider-box">
-					<div class="feedback-slider-item bounceInRight">
+					<div class="feedback-slider-item animated slideInRight">
 						<div class=col-sm-5>
 							<div class="feedback-block">
 								<img src=img/feedback-1.png alt>
@@ -512,7 +512,7 @@
 							<p class=feedback-signature><span>Олег Петров,</span> д. Месягутово</p>
 						</div>
 					</div>
-					<div class="feedback-slider-item bounceInRight">
+					<div class="feedback-slider-item animated slideInRight">
 						<div class=col-sm-5>
 							<div class=feedback-block>
 								<img src=img/feedback-2.jpg alt>
@@ -525,7 +525,7 @@
 							<p class=feedback-signature><span>Ирина Антонова,</span> г. Кисловодск</p>
 						</div>
 					</div>
-					<div class="feedback-slider-item bounceInRight">
+					<div class="feedback-slider-item animated slideInRight">
 						<div class=col-sm-5>
 							<div class=feedback-block>
 								<img src=img/feedback-3.jpg alt>
